# legendary-disco

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile  rust-ci.yml
.github/workflows/: rust.yml
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/src/: part1.rs  part2.rs
day-05/src/: part1.rs  part2.rs
day-06/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: lib.rs  part1.rs  part2.rs
input/: input3_test.txt  input3_test2.txt
scripts/: get-aoc-input.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs  util.rs
src/day1/: main.rs
src/day10/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
src/day9/: main.rs
template/: main.rs
