[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
miette = { version = "7.2", features = ["fancy"] }
glam = "0.27.0"
itertools = "0.12.0"
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
dhat = "0.3.2"
criterion = { version = "0.5", features = ["html_reports"] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
regex = "1.10.4"
rstest = "0.19"
rstest_reuse = "0.6.0"
divan = "0.1.11"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
petgraph = "0.6.4"
rayon = "1.8.0"
tracing-tracy = "0.11"
tracy-client = "0.17"
tracy-client-sys = "0.22.0"
indicatif = { version = "0.17.7", features = ["rayon"] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
